--- a/templates/feed.html
+++ b/templates/feed.html
@@ -7,7 +7,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="row">
-                        <img src="{{ user.profile.image }}" class="feed-avatar"/>
+                        <img src="{{ user.profile.image.url }}" class="feed-avatar"/>
                     </div>
 
                     <div class="row" style="text-align: center; margin-left: 40px">
@@ -19,7 +19,7 @@
 
                     <div class="row" style="margin-top: 10px">
                         <div class="box-flex">
-                            <a href="/{{ user.username }}/follows/">Tweets</a>
+                            <a style="font-size: 13px; color: rgba(0, 0, 0, .5);">Tweets</a>
                             <p>{{ tweets.count }}</p>
                         </div>
                         <div class="box-flex">
@@ -75,7 +75,7 @@
                         <div class="card-body tweet-card">
                             <div style="display: flex; justify-content: space-between">
                                 <div style="float: left">
-                                    <img src="{{ user.profile.image }}" class="tweet-card-avatar"/>
+                                    <img src="{{ tweet.user.profile.image }}" class="tweet-card-avatar"/>
                                     <a href="/{{ tweet.user.username }}/"
                                        class="tweet-name">{{ tweet.user.first_name }}</a>
                                     <span class="tweet-info">
