--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,9 @@ body {
 
 .feed-username {
     padding-top: 25px;
-    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center
 }
 
 .profile-username {
