--- a/templates/feed.html
+++ b/templates/feed.html
@@ -10,17 +10,15 @@
                         <img src="{{ user.profile.image }}" class="feed-avatar"/>
                     </div>
 
-                    <div class="row" style="text-align: center; margin-left: 40px">
-                        <div class="feed-username" style="align-content: center">
-                            <h4 style="font-size: 20px">{{ user.first_name }}</h4>
-                            <p>@{{ user.username }}</p>
-                        </div>
+                    <div class="row feed-username">
+                        <h4 style="font-size: 20px">{{ user.first_name }}</h4>
+                        <p>@{{ user.username }}</p>
                     </div>
 
                     <div class="row" style="margin-top: 10px">
                         <div class="box-flex">
                             <a href="/{{ user.username }}/follows/">Tweets</a>
-                            <p>{{ tweets.count }}</p>
+                            <p>{{ user_tweets_count }}</p>
                         </div>
                         <div class="box-flex">
                             <a href="/{{ user.username }}/following/">Following</a>
@@ -58,9 +56,9 @@
                         <form action="/{{ request.user.username }}/" method="post">
                             {% csrf_token %}
                             {% for field in form %}
-                            <div class="form-group">
-                                {{ field }}
-                            </div>
+                                <div class="form-group">
+                                    {{ field }}
+                                </div>
                             {% endfor %}
                             <input type="hidden" value="{{ request.path }}" name="redirect">
                             <input type="submit" value="Tweet" class="btn float-right tweet-button">
